fixed issue whereby the search component was too short on certain browsers
On older versions of Chrome and Safari, the search component height was too small,
such that most of the job list was not visible and the map was about half its proper height.

Removing the position: relative css rule for .search fixes this.

--- a/web/app/themes/ppj/src/sass/components/search.sass
+++ b/web/app/themes/ppj/src/sass/components/search.sass
@@ -49,7 +49,6 @@
   @include bp('portrait')
     height: 100%
     margin: 0
-    position: relative
     text-align: center
 
   &--job-selected
